# cameratest

./: CMakeLists.txt  main  makefile.bat  makefileforothercomputer.bat  mf.sh  run.bat  ver
assets/: camerasave  inv
shad/: menuFrag.glsl  menuVert.glsl  vert.glsl
src/: collcage.cpp  collcage.h  crossmesh.cpp  crossmesh.h  guielement.cpp  guielement.h  inventory.cpp  inventory.h  main.cpp  opalframes.cpp  opalframes.h  ringbuffer.cpp  ringbuffer.h  soundfxsystem.cpp  soundfxsystem.h  textview.cpp  textview.h
